css/NotAnotherAnimeTheme.css
/* ... */
[class~=guilds-wrapper] {
    background: rgba(0, 0, 0, .8) !important;
}

[class~=create-guild-container] [class~=create-guild] [class~=guild-form] [class~=region-select]:hover [class~=region-select-inner],
.region-select-modal .region-select-modal-option:hover {
    border-left-color: #25ace8;
}

.region-select-modal .region-select-modal-option:hover {
    border-bottom-color: #25ace8;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-left-width: .1875pc !important;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-bottom-width: .1875pc !important;
}

[class~=create-guild-container] [class~=create-guild] [class~=guild-form] [class~=region-select] {
    background: rgba(255, 255, 255, .1);
}

#rtc-connection {
    padding-top: 11.25pt !important;
}

[class~=private-channels] header {
    opacity: .6;
}

#user-profile-modal .guilds .section+.section {
    border-top-style: solid !important;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-right-width: .1875pc !important;
}

.region-select-modal .region-select-modal-option:hover {
    border-right-color: #25ace8;
}

[class~=guilds-wrapper] [class~=guilds] [class~=guild][class~=selected]:before {
    display: none;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-top-width: .1875pc !important;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-left-style: solid !important;
}

[class~=channels-wrap] {
    background: rgba(0, 0, 0, .8);
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-bottom-style: solid !important;
}

.region-select-modal .region-select-modal-option:hover {
    border-top-color: #25ace8;
}

[class~=guilds-wrapper] [class~=guilds] [class~=guild]:first-child,
[class~=guilds-wrapper] [class~=guilds] [class~=friends-online],
.guilds-wrapper .guilds .guild-separator {
    position: relative;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-right-style: solid !important;
}

[class~=guilds-wrapper] [class~=guilds] [class~=guild] {
    margin-left: .5pc;
}

[class~=guilds-wrapper] [class~=guilds] [class~=guild] {
    margin-top: 6pt;
}

#voice-connection {
    z-index: 9;
}

[class~=channel-members],
[class~=private-channels] [class~=search-bar] input {
    background: rgba(0, 0, 0, .8) !important;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-top-style: solid !important;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-left-color: rgba(255, 255, 255, 0) !important;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-bottom-color: rgba(255, 255, 255, 0) !important;
}

[class~=guilds-wrapper] [class~=guilds] [class~=guild]:first-child {
    left: 0;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-right-color: rgba(255, 255, 255, 0) !important;
}

[class~=create-guild-container] {
    background: none !important;
}

[class~=region-select-modal] {
    background: rgba(0, 0, 0, .8);
}

[class~=create-guild-container] [class~=create-guild] [class~=guild-form] [class~=region-select]:hover button {
    background-color: #25ace8;
}

[class~=guilds-wrapper] [class~=guilds] [class~=guild]:first-child,
[class~=guilds-wrapper] [class~=guilds] [class~=friends-online] {
    margin-left: auto;
}

.private-channels .channel.selected a {
    background-color: rgba(0, 0, 0, .2);
}

#voice-connection {
    border-top-width: medium !important;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-top-color: rgba(255, 255, 255, 0) !important;
}

#voice-connection .btn,
#rtc-connection [class~=btn] {
    box-shadow: none !important;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    border-image: none !important;
}

[class~=guilds-wrapper] [class~=guilds] [class~=guild] [class~=guild-inner] a {
    width: 37.5pt;
}

.iconButton-1gj-X0 {
    opacity: 0.1;
}

[class~=guild-header],
#user-profile-modal [class~=guilds] [class~=section] [class~=connected-accounts] [class~=connected-account] {
    border-bottom-width: .010416667in;
}

[class~=scroller-wrap] [class~=scroller]::-webkit-scrollbar-track-piece {
    background-color: rgba(0, 0, 0, .3) !important;
}

.guilds-wrapper .guilds .guild-separator,
[class~=guilds-wrapper] [class~=guilds] [class~=friends-online] {
    width: 100%;
}

.btn-hamburger span {
    background: #fff;
}

[class~=guild-channels] [class~=icon-instant-invite] {
    background-image: url("127.0.0.1");
}

[class~=form] header,
[class~=region-select-modal] [class~=region-select-modal-header] {
    color: #25ace8;
}

#voice-connection .btn {
    background: rgba(0, 0, 0, .4);
}

[class~=guilds-wrapper] [class~=guilds] [class~=guild]:first-child,
[class~=guilds-wrapper] [class~=guilds] [class~=friends-online] {
    margin-bottom: -10px;
}

[class~=search-results-wrap] [class~=search-result]:not([class~=expanded]) [class~=search-result-message][class~=hit] {
    border-bottom-width: .020833333in !important;
}

.guilds-wrapper .guilds .guild-separator {
    margin-top: 7.5pt;
}

[class~=search-results-wrap] [class~=search-result]:not([class~=expanded]) [class~=search-result-message][class~=hit] {
    border-right-width: .020833333in !important;
}

[class~=guilds-wrapper] [class~=guilds] [class~=guild]:first-child {
    margin-right: auto;
}

[class~=content] [class~=flex-spacer] {
    background: rgba(0, 0, 0, .8);
}

[class~=account] [class~=btn-settings]:after {
    opacity: .3;
}

[class~=search-popout] [class~=option]:after {
    background: transparent;
}

[class~=create-guild-container] [class~=action] {
    background: rgba(0, 0, 0, .7);
}

[class~=guild-header] {
    background: rgba(0, 0, 0, .1);
}
/* ... */

